--- a/PAGOD_TIME/.classpath
+++ b/PAGOD_TIME/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry excluding="images/" kind="src" path=""/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.5.0_02"/>
-	<classpathentry exported="true" kind="lib" path="lib/jdic.jar"/>
 	<classpathentry exported="true" kind="lib" path="images"/>
-	<classpathentry exported="true" kind="lib" path="lib/xom-1.0.jar"/>
+	<classpathentry kind="lib" path="lib_windows/jdic.jar"/>
+	<classpathentry kind="lib" path="lib_windows/xom-1.0.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
