--- a/PAGOD_TIME/.classpath
+++ b/PAGOD_TIME/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib_common/xom-1.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_windows/jdic.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib_linux/jdic.jar"/>
 	<classpathentry excluding="images/" kind="src" path=""/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.5.0_02"/>
-	<classpathentry exported="true" kind="lib" path="images"/>
-	<classpathentry kind="lib" path="lib_windows/jdic.jar"/>
-	<classpathentry kind="lib" path="lib_windows/xom-1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.5.0_02"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
