mise a jour des fichiers ant

--- a/PAGOD/antwizard.properties
+++ b/PAGOD/antwizard.properties
@@ -1,3 +1,3 @@
-#Fichier propriété
-#Sun Oct 30 16:49:52 CET 2005
-build.number=0
+#Build Number for ANT. Do not edit!
+#Fri Mar 10 19:34:17 CET 2006
+build.number=3
