--- a/CORBA_MAV/.settings/org.eclipse.jdt.ui.prefs
+++ b/CORBA_MAV/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
-#Tue Mar 20 17:21:56 CET 2007
+#Mon May 28 13:44:06 CEST 2007
 eclipse.preferences.version=1
 internal.default.compliance=default
+org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
